<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spUser"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:entries="@array/user_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spGroup"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:entries="@array/group" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spRole"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:entries="@array/role" />



        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Continue"/>



    </LinearLayout>


</LinearLayout>