<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activity.CreateEventActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/dimens_50"
        android:layout_height="@dimen/dimens_50"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/create_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_continue"
        android:layout_margin="@dimen/dimens_20"
        app:cardCornerRadius="@dimen/dimens_5"
        app:cardElevation="@dimen/dimens_8dp"
        app:contentPadding="@dimen/dimens_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimens_5"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dimens_10"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/medium"
                    android:gravity="center"
                    android:letterSpacing="0.05"
                    android:text="@string/event_name_label"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_13" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimens_10"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/event_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rect_white"
                        android:fontFamily="@font/regular"
                        android:gravity="center|start"
                        android:hint="@string/enter_event_name_label"
                        android:inputType="textCapSentences|textMultiLine"
                        android:letterSpacing="0.05"
                        android:maxHeight="@dimen/dimens_5"
                        android:maxLines="1"
                        android:padding="@dimen/dimens_5"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="@color/Activite"
                        android:textColorHint="@color/dull_white"
                        android:textSize="@dimen/text_size_13" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/dull_white" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_0"
                android:layout_marginTop="@dimen/dimens_10"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/medium"
                    android:letterSpacing="0.05"
                    android:text="@string/description_label"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_14" />

                <EditText
                    android:id="@+id/event_msg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:background="@drawable/rect_white"
                    android:fontFamily="@font/regular"
                    android:gravity="top|start"
                    android:hint="@string/enter_event_description_label"
                    android:inputType="textCapSentences|textMultiLine"
                    android:letterSpacing="0.05"
                    android:maxLines="10"
                    android:minHeight="@dimen/dimens_30"
                    android:padding="@dimen/dimens_5"
                    android:scrollHorizontally="true"
                    android:textColor="@color/Activite"
                    android:textColorHint="@color/dull_white"
                    android:textSize="@dimen/text_size_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dimens_10"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="1">


                <FrameLayout
                    android:layout_width="@dimen/dimens_0"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dimens_15"
                    android:layout_weight=".5">

                    <com.picmob.android.utils.widgets.ShapeImageView
                        android:id="@+id/img_thumb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_landscape"
                        app:shapeDrawable="@drawable/rounded_background" />

                </FrameLayout>

                <Button
                    android:id="@+id/select_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".5"
                    android:fontFamily="@font/medium"
                    android:letterSpacing="0.05"
                    android:padding="@dimen/dimens_10"
                    android:text="@string/select_display_picture_optional"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dimens_30"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/medium"
                    android:letterSpacing="0.05"
                    android:text="@string/event_type_label"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_13" />

                <RadioGroup
                    android:id="@+id/event_type_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/public_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/dimens_30"
                        android:checked="false"
                        android:letterSpacing="0.05"
                        android:text="@string/public_label"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/text_size_13" />

                    <RadioButton
                        android:id="@+id/private_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:letterSpacing="0.05"
                        android:text="@string/private_label"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/text_size_13" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dimens_20"
        android:layout_marginEnd="@dimen/dimens_20"
        android:layout_marginBottom="@dimen/dimens_10"
        android:background="@color/purple_500"
        android:visibility="visible"
        android:fontFamily="@font/medium"
        android:letterSpacing="0.05"
        android:text="@string/continues"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        app:rippleColor="@color/purple_200" />
</RelativeLayout>