<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:padding="20dp"
            android:text="@string/picmob"
            android:textColor="@color/purple_500"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="5dp"
            app:contentPadding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etUsrName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/regular"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:letterSpacing="0.1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/Activite"
                    android:textColorHint="@color/dull_white"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="@color/dull_white" />

                <com.xwray.passwordview.PasswordView
                    android:id="@+id/etPswrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@null"
                    android:fontFamily="@font/regular"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:letterSpacing="0.1"
                    android:padding="3dp"
                    android:singleLine="true"
                    android:textColor="@color/Activite"
                    android:textColorHint="@color/dull_white"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="@color/dull_white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvReg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/medium"
                        android:gravity="start"
                        android:letterSpacing="0.08"
                        android:padding="5dp"
                        android:text="Create account"
                        android:textColor="@color/purple_700"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvForgetPswrd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/medium"
                        android:gravity="end"
                        android:letterSpacing="0.08"
                        android:padding="5dp"
                        android:text="@string/forgot_password_question_mark"
                        android:textColor="@color/purple_700"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/medium"
            android:letterSpacing="0.1"
            android:text="@string/login"
            android:textColor="@color/white" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/medium"
            android:letterSpacing="0.1"
            android:textAlignment="center"
            android:textSize="15sp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnFbLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/medium"
            android:letterSpacing="0.1"
            android:padding="5dp"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>